# argus

./: .env.example  .gitignore  AGENTS.md  PLAN.md  README.md  check_db.py  project.md  pyproject.toml  test_search.py
argus/: __main__.py  app.py
argus/cli/: __init__.py  models.py  onboard.py  profile.py  research.py  search.py  status.py
argus/llm/: circuit_breaker.py  compressor.py  profile.py  provider_config.py  providers.py  router.py  schema.py
argus/llm/prompts/: extraction.txt  planning.txt  synthesis.txt
argus/services/: heartbeat.py
argus/services/agents/: _parse.py  base.py  deep_dive.py  scout.py  synthesis.py  verification.py
argus/shared/: config.py  idempotency.py  logging.py  models.py  redis_factory.py
argus/ui/: report_generator.py  watcher.py
docs/: agent_protocols.md  architecture.md  graph_schema.md  manual.md  performance.md  solution.md
evaluation/: ablation.py  metrics.py  pipeline.py  report.py  runner.py
evaluation/datasets/: academic_survey.json  market_research.json  tech_comparison.json
evaluation/reports/: ablation_results.json  ablation_results.md  benchmark_results.json  phase5_results.md
infra/: Dockerfile  docker-compose.yml
tests/: conftest.py
tests/evaluation/: test_ablation.py  test_metrics.py
tests/integration/: test_deep_dive.py  test_full_research_parallel.py  test_verification.py
tests/unit/: test_checkpoints.py  test_circuit_breaker.py  test_compressor.py  test_confidence.py  test_cost_tracker.py  test_credibility.py  test_dlq.py  test_heartbeat.py  test_idempotency.py  test_planner.py  test_report_generator.py  test_router.py  test_scout.py  test_source_cache.py  test_synthesis.py  test_timeout.py
~/.argus/: knowledge.db-shm  knowledge.db-wal
(+28 files in other folders)
