[project]
name = "argus"
version = "0.1.0"
description = "Autonomous research agent that thinks in graphs, cites everything, and shows its work."
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "redis[hiredis]>=5.2.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.6.0",
    "httpx>=0.28.0",
    "beautifulsoup4>=4.12.0",
    "lxml>=5.3.0",
    "pymupdf>=1.25.0",
    "duckduckgo_search>=7.0.0",
    "openai>=1.55.0",
    "sqlite-vec>=0.1.0",
    "tenacity>=9.0.0",
    "pybreaker>=0.6.0",
    "structlog>=24.4.0",
    "trafilatura>=2.0.0",
    "jinja2>=3.1.0",
]

[project.urls]
homepage = "https://github.com/anomalyco/argus"

[project.scripts]
argus = "argus.cli:main"

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
    "ruff>=0.8.0",
    "mypy>=1.13.0",
]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "SIM", "ARG", "C4"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true
warn_unused_ignores = true
warn_unreachable = true
exclude = ["tests/"]
explicit_package_bases = true
namespace_packages = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
filterwarnings = ["ignore::DeprecationWarning"]

[tool.coverage.run]
source = ["argus"]

[tool.coverage.report]
exclude_lines = ["pragma: no cover", "if TYPE_CHECKING:"]

[tool.setuptools.packages.find]
include = ["argus*"]

[tool.setuptools.package-data]
"argus" = ["py.typed"]
